# Rust-Simple-Messenger

./: Rust Simple Messenger
client/: Cargo.toml
client/src/: main.rs
server/: Cargo.toml
server/src/: main.rs  server.rs
