[package]
name = "client"
version = "0.1.0"
authors = ["Josh Lambert"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
bytes = "1.2.1"
clap = { version = "3.2.8", features = ["derive"] }
tokio = { version = "1.19.2", features = ["full"]}
futures = "0.3.21"
tokio-util = { version = "0.7.3", features = ["codec"]}
serde = { version = "1.0.118", features = ["derive"] }

