[package]
name = "simplemessenger"
version = "0.1.0"
authors = ["Josh Lambert"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.19.2", features = ["full"]}
anyhow = "1.0.58"
bytes = "1.2.1"
clap = { version = "3.2.8", features = ["derive"] }
futures = "0.3.21"
tokio-util = { version = "0.7.3", features = ["codec"]}
warp = "0.2.3"
env_logger = "0.7.1"
serde = { version = "1.0.118", features = ["derive"] }


[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]